<resources>
    <string name="app_name">Pocket Shelf</string>
    <string name="my_book_shelf">My Book Shelf</string>
    <string name="borrowed_books">Borrowed Books</string>
    <string name="bought_books">Bought Books</string>
    <string name="want_to_buy">Want to Buy</string>
    <string name="reading">Reading</string>
    <string name="read">Read</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_book">Add Book</string>
    <string name="book_name">Book Name :</string>
    <string name="borrowed_from">Borrowed From :</string>
    <string name="borrowed_date">Borrowed Date :</string>
    <string name="add">Add</string>
    <string name="add_book_in_the_list">Add book in the list</string>
    <string name="type_here01">Type here....</string>
    <string name="type_here02">Type here...</string>
    <string name="type_here03">Type_here</string>
    <string name="add_new_book">Add New Book</string>
    <string name="buy_book_name">Name :</string>
    <string name="want_buy_author">Author :</string>
    <string name="wnat_buy_add">Add</string>
    <string name="book_name_my">Book Name :</string>
    <string name="author_name_my">Author Name :</string>
    <string name="publisher_my">Publisher :</string>
    <string name="buying_date_my">Buying Date :</string>
    <string name="shop_name_my">Shop Name :</string>
    <string name="price_my">Price :</string>
    <string name="reading_status_my">Reading Status :</string>
    <string name="new_read_reading_my">new,read,reading</string>
</resources>
