<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addBorrowedBook">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="184dp"
        android:text="@string/borrowed_date"
        android:textAppearance="@android:style/TextAppearance"
        android:textSize="18sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="123dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="@string/book_name"
        android:textAppearance="@android:style/TextAppearance"
        android:textSize="18sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="109dp"
        android:text="@string/borrowed_from"
        android:textAppearance="@android:style/TextAppearance"
        android:textSize="18sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/bookName"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/textView4"
        android:ems="10"
        android:hint="@string/type_here01"
        android:inputType="text" />

    <EditText
        android:id="@+id/BorrowedFrom"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:ems="10"
        android:hint="@string/type_here03"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/BorrowedDate"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView4"
        android:ems="10"
        android:hint="@string/type_here02"
        android:inputType="textPersonName|date" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="184dp"
        android:layout_marginStart="134dp"
        android:onClick="addAndGo"
        android:text="@string/add" />

</RelativeLayout>